# devboard

./: .coverage 2  .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  NOTICE  PHASE-3A-TEST-REPORT.md  PHASE3A_TESTS_SUMMARY.txt  README.md  README.ru.md  README_WINDOWS.md  approval_gates.md  audit_pride_refs.py  calculator.py  docker-compose.yml  pytest.ini  release-please-config.json  requirements-dev.txt  requirements.txt  run_qa_checks.sh  setup.py  Запустить devboard.bat  Запустить devboard.command  Запустить pride-team.bat  Запустить pride-team.command
commands/: devboard-start.sh  (+16 more)
dashboard/: app.py  hr.py  pyproject.toml
dashboard/static/: app.js  style.css
dashboard/static/css/: chat.css  tour.css
dashboard/templates/: calculator.html  chat.html  home.html  kanban.html  owner-dashboard.html
dashboard/tests/: conftest.py  test_api.py  test_api_manager_bootstrap.py  test_artifacts_api.py  test_assignee_fix.py  test_auto_mode_persistence.py  test_demo.py  test_departments_endpoint.py  test_f1_artifacts_badge.py  test_f1_assignee_dropdown.py  test_f2_1_enabled_api.py  test_hr_pipeline.py  test_inherits_skills.py  test_inter_department.py  test_notifications_filter.py  test_owner_dashboard.py  test_owner_dashboard_api.py  test_parallel_roles.py  test_phase15_e2e.py  test_phase1_adr009.py  test_phase2_marketing.py  test_phase3a_chat.py  test_roles_import.py  test_s9_2_department_filters.py  test_stats_endpoint.py  test_task_parser.py  test_task_parser_api.py  test_team_api.py  test_team_process.py  test_team_start.py  test_threads_crud.py  test_threads_rest_api.py  test_user_expertise.py  test_v2_e2e.py
mcp_server/: pyproject.toml
mcp_server/devboard_tasks/: __init__.py  __main__.py  db.py  parser.py  router.py  server.py  template_loader.py  tools.py
mcp_server/pride_tasks/: __init__.py  __main__.py  alerts.py  db.py  models.py  router.py  server.py  template_loader.py  tools.py
mcp_server/tests/: conftest.py  test_alerts.py  test_artifacts.py  test_atomic.py  test_chat_threads_migration.py  test_db.py  test_departments_db.py  test_f2_1_enabled.py  test_manager_memory.py  test_migrate_тимлид_to_dev_lead.py  test_phase1_adr009_migration.py  test_planning_session.py  test_register_artifact.py  test_router.py  test_s15_token_opt.py  test_tools.py  test_tools_departments.py  test_tools_errors.py  test_v2_migration_smoke.py
(+121 files in other folders)
