[project]
name = "devboard-dashboard"
version = "0.1.0"
description = "Flask-дашборд малой команды devboard. Канбан + кнопка запуска тимлида."
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "devboard-tasks",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.uv.sources]
devboard-tasks = { path = "../mcp_server", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dashboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
